fix sort icon alignment, increase minwidth

--- a/addon/styles/addon.scss
+++ b/addon/styles/addon.scss
@@ -113,9 +113,8 @@ $et-verticalPadding-headerCell: 8px !default;
 	background-color: $et-backgroundColor;
 	// Note: Size of the border needs to be synced with the size in ember-table.js
 	border: $et-borderSize solid $et-borderColor-container;
-	outline: 0;
 	border-radius: 3px;
-
+	outline: 0;
 	// &.is-selectable {
 	// 	user-select: text;
 	// }
@@ -297,19 +296,6 @@ $et-verticalPadding-headerCell: 8px !default;
 		height: 100%;
 		background-color: blue;
 	}
-	.ui-resizable-handle {
-		position: absolute;
-		right: 0;
-		background-color: red;
-		&.ui-resizable-e {
-			top: 0;
-			width: 3px;
-			height: 100%;
-			&:hover {
-				cursor: col-resize;
-			}
-		}
-	}
 	.ui-sortable {
 		position: relative;
 		width: 100%;
@@ -341,6 +327,9 @@ $et-verticalPadding-headerCell: 8px !default;
 // > http://jqueryui.com/draggable/#cursor-style
 // cursor: -webkit-grabbing; cursor: -moz-grabbing;
 
+$et-headerCellSortIconContainer-width: 16px;
+$et-headerCellPopoverLink-size: 16px;
+
 .et-header-cell {
 	position: relative;
 	// Override the jQuery sortable
@@ -349,40 +338,58 @@ $et-verticalPadding-headerCell: 8px !default;
 	font-size: $et-fontSize-header !important;
 	color: $et-color-header;
 	background-color: $et-backgroundColor-headerCell;
+	transition: background-color .3s $transition-easing;
+	overflow: hidden;
 	span {
 		line-height: 1;
 	}
 	&:hover {
-		background-color: #f3f3f3;
+		background-color: $color-grey-50;
 	}
 }
 
-$et-headerCellPopoverLink-size: 16px;
+.et-header-cell .ui-resizable-handle {
+	position: absolute;
+	right: 0;
+	background-color: $et-backgroundColor-headerCell;
+	transition: background-color .3s $transition-easing;
+	&.ui-resizable-e {
+		top: 0;
+		width: 3px;
+		height: 100%;
+		&:hover {
+			cursor: col-resize;
+		}
+	}
+}
+
+.et-header-cell:hover .ui-resizable-handle {
+	background-color: $color-grey-200;
+}
 
 .et-header-cell .et-content-container {
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
+	display: flex;
 	cursor: pointer;
+
+	align-items: flex-end;
 	&.et-table-header-tree-cell {
 		left: 20px;
 	}
 }
 
+.et-header-cell.u-textRight .et-content-container {
+	justify-content: flex-end;
+}
+
 .et-header-cell .et-headerCellContent {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	right: 0;
 	padding-top: $et-verticalPadding-headerCell;
 	padding-bottom: $et-verticalPadding-headerCell;
-	padding-right: $et-horizontalPadding-headerCell;
-	padding-left: $et-horizontalPadding-headerCell;
 	font-weight: 500;
 	line-height: 1.3;
-	// background-color: blue;
+}
+
+.et-header-cell:first-child {
+	padding-left: $et-horizontalPadding-cell - $et-headerCellSortIconContainer-width;
 }
 
 .et-header-cell .et-toggle {
@@ -418,11 +425,10 @@ $et-headerCellPopoverLink-size: 16px;
 // Sort Icon
 // ---------
 
-// $et-headerCellSortIconContainer-width: 10px;
 .et-sortIcon {
-	position: absolute;
-	bottom: 8px;
-	left: 7px;
+	width: $et-headerCellSortIconContainer-width;
+	text-align: center;
+	padding-bottom: 8px;
 	font-size: 16px;
 }
 
